# pyvegh

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
python/vegh/: __init__.py  analytics.py  cli.py  cli_commands.py  cli_helpers.py  cli_hooks.py  cli_main.py  config.jsonc  jsonc.py
src/: core.rs  hash.rs  lib.rs  storage.rs
tests/: integration_test.sh
