[package]
name = "pyvegh"
version = "0.2.4"
edition = "2024"
authors = ["CodeTease"]

[lib]
name = "pyvegh_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py38"] }

# Core Logic Deps
tar = "0.4"
zstd = "0.13"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"