[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyvegh"
version = "0.2.0"
description = "Python bindings for Vegh - The CodeTease Snapshot Tool."
authors = [{name = "CodeTease"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["snapshot", "backup", "rust", "binding"]
license = {file = "LICENSE"}
dependencies = [
    "typer>=0.20.0",      
    "rich>=14.2.0",       
    "shellingham>=1.5.4", 
    "requests>=2.32.5",   
]

[project.scripts]
vegh = "vegh.cli:app"  # CLI entry point

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vegh._core" # Maps Rust binary to vegh._core